outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_23-14-52/evaluations/problem_eval7183561524904073681_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance through a multi-objective scoring system combining node centrality, distance metrics, and a novel "exploration potential" factor, while maintaining probabilistic selection with temperature-adjusted weights.}
                                                                                                                                                                                                                             ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance through a multi-objective scoring system combining node centrality, distance metrics, and a novel "exploration potential" factor, while maintaining probabilistic selection with temperature-adjusted weights.}
                                                                                                                                                                                                                             ^
SyntaxError: unmatched '}'
